--- a/.github/workflows/python-test-and-lint.yml
+++ b/.github/workflows/python-test-and-lint.yml
@@ -2,7 +2,11 @@
 # https://docs.github.com/en/actions/language-and-framework-guides/using-python-with-github-actions
 name: Python
 
-on: [push]
+on:
+  push:
+    paths:
+      - '**.py'
+      - '.github/workflows/*.yml'
 
 jobs:
   build:
