--- a/.github/workflows/python-test-and-lint.yml
+++ b/.github/workflows/python-test-and-lint.yml
@@ -6,7 +6,7 @@ on:
   push:
     paths:
       - '**.py'
-      - '.github/workflows/*.yml'
+      - '.github/workflows/python-test-and-lint.yml'
 
 jobs:
   build:
@@ -29,7 +29,7 @@ jobs:
 
       - name: Test with Pytest
         run: |
-          python3 -m pytest -vv
+          python3 -m pytest -vv -s
 
       - name: Lint with Flake8
         run: |
