--- a/.github/workflows/python-test-and-lint.yml
+++ b/.github/workflows/python-test-and-lint.yml
@@ -5,8 +5,9 @@ name: Python
 on:
   push:
     paths:
-      - '**.py'
       - '.github/workflows/python-test-and-lint.yml'
+      - 'tox.ini'
+      - '**.py'
 
 jobs:
   build:
@@ -16,16 +17,15 @@ jobs:
       - name: Set up the repository
         uses: actions/checkout@v2
 
-      - name: Set up Python 3.8
+      - name: Set up Python 3.9
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.9
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python3 -m pip install --upgrade pip
+          pip3 install -r requirements.txt
 
       - name: Test with Pytest
         run: |
